src/App.css
.App {
  text-align: center;
  background-color: lightgreen;
}

.App__header--container {
  background-color: rgb(164, 243, 164);
  margin: 0;
}

.App__header--title {
  margin-top: 0.2em;
  margin-bottom: 0.2em;
}

.App__header--subtitle {
  font-size: 0.8em;
}

.App__Segment {
  background-color: rgb(164, 243, 164) !important;
}

.App__Segment p, .list {
  margin: 1em 0 1em;
  text-align: justify;
}

.Segment__carousel--container {
  width: 300px;
  margin: auto;
}

.Segment__img--container img {
  height: 120px !important;
}

.Footer {
  text-align: center;
}

